@@ -70,6 +70,7 @@ extern	struct pixmap descent3_pix;
 extern	struct pixmap gamespy3d_pix;
 extern	struct pixmap ssam_pix;
 extern	struct pixmap mohaa_pix;
+extern	struct pixmap savage_pix;
 
 extern	struct pixmap gplus_pix;
 extern	struct pixmap rminus_pix;
