@@ -1,0 +1,36 @@
+/* XPM */
+static char * savage_xpm[] = {
+"16 16 17 1",
+" 	c None",
+".	c #070504",
+"+	c #4C473B",
+"@	c #B6A382",
+"#	c #82673F",
+"$	c #8A7654",
+"%	c #4A3A25",
+"&	c #D7C68F",
+"*	c #463116",
+"=	c #AA946D",
+"-	c #584833",
+";	c #D2B256",
+">	c #99835E",
+",	c #C8B898",
+"'	c #221A0F",
+")	c #DED4C4",
+"!	c #6F522B",
+"      =&,$>     ",
+"     ,,&,#$#    ",
+"    =)@,&$$!-   ",
+"    @@>,&#>#!-  ",
+"   =>>$,,>>>!!  ",
+" $$#$>+++++>#->$",
+" @!*!$.....$!*!$",
+"=&!'#=$+.+$=!'#;",
+"=;#.#@=@.,=$!.>&",
+"!;>.>@=@.,>$#.;&",
+" >;-==>@.,=$!'&>",
+"  #+->>@.,>$%*! ",
+"     '%$.>-'    ",
+"      .....     ",
+"                ",
+"                "};
