@@ -117,6 +117,7 @@ enum server_type {
   SSAM_SERVER,
   SSAMSE_SERVER,
   MOHAA_SERVER,
+  SAS_SERVER,
   GPS_SERVER,
   UNKNOWN_SERVER
 };
