@@ -1,3 +1,6 @@
+Oct 08, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- stub functions for savage
+
 Oct 06, 2003: Jordi Mallach <jordi@sindominio.net>
 - remove non-ASCII character from source, which broke gettext 0.12.
 - update QuakeForge's HexenWorld port.
